fix contact us link dissappearing on small screens

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -582,6 +582,10 @@ html {
     position: fixed;
     z-index: 10000;
 
+    .li-link-contact{
+      display: none !important;
+    }
+
     .cs-container {
       width: 100%;
       /* same height as the cs-ul-wrapper */
